--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@vue/cli-plugin-babel": "4.1.1",
     "bootstrap-vue": "2.21.2",
+    "bootswatch": "^4.6.0",
     "vue": "2.6.12"
   },
   "devDependencies": {
@@ -23,6 +24,8 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-vue": "^7.2.0",
+    "sass": "^1.32.6",
+    "sass-loader": "^10.1.1",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
